--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                         <div class="block-title">
                           <h3>About <span>Me</span></h3>
                         </div>
-                        <p>Hello! I’m Nazira. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum ullamcorper sem, at placerat dolor volutpat ac. Duis nulla enim, condimentum nec ultricies.</p>
+                        <p>Hello! I’m Nazira. I am a Software Engineer with 8 months of experience building responsive and scalable websites, I specialize in JavaScript, JQuery, React JS, and Node.js. I believe in a mobile-first approach and contemporary CSS design.</p>
                       </div>
                       <div class="download-resume">
-                        <a href="" class="btn btn-secondary">Download Resume</a>
+                        <a href="./resume.html" class="btn btn-secondary">Download Resume</a>
                       </div>
                     </div>
 
@@ -133,7 +133,7 @@
                       <ul class="info-list">
                         <li><span class="title">Address</span><span class="value">Seattle, USA</span></li>
                         <li><span class="title">e-mail</span><span class="value"><a href="mailto:nananurtay@gmail.com">nananurtay@gmail.com</a></span></li>
-                        <li><span class="title">Phone</span><span class="value">+0123 123 456 789</span></li>
+                        <li><span class="title">Phone</span><span class="value">(907)687-8688</span></li>
                       </ul>
                     </div>
 
@@ -155,34 +155,46 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Education</h3>
+                          <h3>Software Engineer</h3>
+                          <p>Address: 5201 W Malstrom Dr, Spokane WA | Phone: (907)687-8688 | nananurtay@gmail.com https://www.linkedin.com/in/nazira-uzakbaeva-836a0b208/ | https://github.com/nazirauzak</p>
                         </div>
 
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Professional Summary</h4> 
+                            <span class="item-period"></span> 
+                            <!-- <span class="item-small">Apple Inc.</span> -->
+                            <p class="item-description">With 8 months of experience building responsive and scalable websites, I specialize in JavaScript, JQuery, React JS, and Node.js. I believe in a mobile-first approach and contemporary CSS design. I am well-versed in all phases of the web development process.Extensive experience in the web life cycle including all stages from architecture to deployment. Devoted to delivering high-quality applications. Being a member of a Scrum team and ensuring that the biggest impact features are prioritized and worked on first.A strong believer in teamwork, a dedicated learner, and an active critical thinker.
+                            </p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Work History</h4> 
+                            <span class="item-period">Front-End Developer OnSilkRoad | November 2020 - present</span>
+                            <span class="item-small">OnSilkRoad</span>
+                            <p class="item-description">Developing React components for an e-commerce website
+                              Developing high-performance reusable code for UI components
+                              Adding products to Strapi with corresponding data.
+                              Implementing mobile first approach, creating responsive templates using CSS techniques and libraries, such as Material UI, Bootstrap/Reactstrap, Sass. Contributing to design and code reviews
+                              Communicating and providing information to other departments on new Front-End features and updates. Experience in working in Scrum environment.</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Skills</h4>
+                            <span class="item-period"></span>
+                            <span class="item-small"></span>
+                            <p class="item-description">HTML| CSS| JavaScript React.Js|Redux|Hooks Node.js| Express
+                              Next | Axios
+                              REST API | JSON | Mongo DB Strapi | NPM
+                              Material UI|Bootstrap
+                              Sass | Less | Tailwind
+                              Agile Scrum | Jira
+                              Windows | Mac OS | UNIX | LINUX</p>
                           </div>
                           <!-- / Education 3 -->
                         </div>
@@ -192,34 +204,35 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Experience</h3>
+                          <h3>Academic History</h3>
                         </div>
 
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Dec 2012 - Current</span>
-                            <span class="item-small">Web Agency</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Nucamp | online course </h4>
+                            <span class="item-period">January 2020 - June 2020</span>
+                            <span class="item-small">Bootcamp</span>
+                            <p class="item-description">Nucamp | online course January 2020 - June 2020
+                              Subjects: HTML, CSS, JavaScript, React.js, Redux, Algorithm, Data Structure, Git, Github.</p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Web Designer</h4>
-                            <span class="item-period">Dec 2011 - Nov 2012</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Kyrgyz State Medical Academy</h4>
+                            <span class="item-period">September 2004 - June 2011</span>
+                            <span class="item-small">KSMA</span>
+                            <p class="item-description">Masters in Oncology</p>
                           </div>
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Graphic Designer</h4>
-                            <span class="item-period">Jan 2010 - Dec 2011</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Languages</h4>
+                            <span class="item-period"></span>
+                            <span class="item-small"></span>
+                            <p class="item-description">English, Russian, Turkish, Kyrgyz</p>
                           </div>
                           <!-- / Experience 3 -->
                         </div>
@@ -235,17 +248,17 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>HTML5</h4>                               
+                          <h4>HTML/CSS</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
-                          <h4>CSS3/LESS/SASS</h4>
+                          <h4>javascript</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-5"></div>
                           </div>
 
-                          <h4>jQuery</h4>
+                          <h4>React</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-6"></div>
                           </div> 
@@ -649,6 +662,7 @@
                             <h5 class="name">Project Name</h5>
                             <small>Illustration</small>
                             <i class="fa fa-image"></i>
+                            
                           </div>
                         </a>
                       </figure>
