--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
                         <li><span class="title">Address</span><span class="value">Seattle, USA</span></li>
-                        <li><span class="title">e-mail</span><span class="value"><a href="mailto:nananurtay@gmail.com">nananurtay@gmail.com</a></span></li>
+                        <li><span class="title">e-mail</span><span class="value"><a href="mailto:nananurtay@gmail.com">nazira13u@gmail.com</a></span></li>
                         <li><span class="title">Phone</span><span class="value">(907)687-8688</span></li>
                       </ul>
                     </div>
